--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+.container{
+  border-radius: 15px;
+  height: 600px ;
+  width: 700px;
+  margin-left: 200px;
+  
+      font-family: "Poppins", sans-serif;
+      font-weight: 100px;
+      font-style: normal;
+      box-shadow: 15px 15px 15px #051937 ;
+    
+background-image: linear-gradient(to bottom, #051937, #004d7a, #008793, #00bf72, #a8eb12);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn {
+  background: linear-gradient(to right,#051937 ,#008793);
+  transform: all 0.3s ease;
+  border: none;
+  border-radius: 4px;
+  margin-left: 10px;
+  font-family: "Poppins", sans-serif;
+    font-weight: 100px;
+    font-style: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn:hover {
+  background: linear-gradient(to right, red, orange);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn:active {
+  color: black;
 }
-
-.App-link {
-  color: #61dafb;
+.Addline{
+  color: #a8eb12;
+  font-family: "Poppins", sans-serif;
+    font-weight: 100px;
+    font-style: normal;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons{
+  width: 50px;
+  height: 15px;
+  color: greenyellow;
 }
+.input{
+      width: 200px;
+      height: 20px;
+      
+       text-decoration: none;
+       border-color: #92598d;
+       border-radius: 10px;
+      
+   
+       
+    
+}
+ input:hover {
+  color: #f4f2ca;
+  opacity: .6;
+ }
